# DbGuiLib

./: CMakeLists.txt  DbGuiLib.pro  README.md  canvaswidget.cpp  canvaswidget.h  dbguilib_global.h  editorfactory.cpp  editorfactory.h  ledindicator.cpp  matrix4x4widget.h  quaternionwidget.h  vector2dwidget.cpp  vector2dwidget.h  vector3dwidget.cpp  vector4dwidget.cpp  vector4dwidget.h
translations/: dbguilib_de.ts  dbguilib_en.ts
widgets/: databasewidget.cpp  databasewidget.h  ledindicator.h  limitedspinbox.h  matrix4x4widget.cpp  qstringlistwidget.ui  quaternionwidget.cpp  stringlistwidget.cpp  stringlistwidget.h  urlwidget.cpp  urlwidget.h  vector2dwidget.cpp  vector3dwidget.cpp  vector3dwidget.h  vector4dwidget.cpp
